# LittleBrother

./: README.txt  imagetesting.py  main.py
opencv/: CMakeCache.txt  CMakeLists.txt  LittleBrother  LittleBrother.cpp  Makefile  cmake_install.cmake  feed.cpp  feed.h  lbwindow.cpp  lbwindow.h  main.cpp
opencvstuff/: CMakeCache.txt  CMakeLists.txt  LittleBrother  Makefile  cmake_install.cmake  first.cpp
